fixed signature self-aligning toward top

--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,6 @@ p {
 }
 
 .signatureMessage {
-  align-self: center;
   text-align: center;
   display: flex;
   flex-direction: column;
